# LANdoh

./: .gitignore  Cargo.toml  README.md  angular.json  build.rs  package.json
proto/: landoh.proto  pb.proto
src/: app.rs  client.rs  file.rs  index.html  landoh.rs  lib.rs  main.rs  model.rs  multicast.rs  pb.rs  server.rs  source.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/proto/: pb.proto  proto.proto
src-tauri/src/: app.rs  client.rs  legacy_server.rs  lib.rs  main.rs  model.rs  multicast.rs  pb.rs  server.rs  source.rs  sv.rs
src-tauri/src/server/: main.rs  order.rs  proto.rs  request.rs  server.rs  service.rs
src-tauri/testdestination/testdir/: file_root
src-tauri/testdir/sub1/: sub1_file1
src/app/: app-routing.module.ts  app.component.ts  app.config.component.ts  app.footer.component.ts  app.main.component.html  app.main.component.ts  app.menu.component.html  app.module.ts  app.rightpanel.component.ts  app.topbar.component.ts
src/app/demo/service/: app.config.service.ts
src/app/demo/view/: dashboard.component.html  documentation.component.html
src/app/models/: app.ts  directory.ts  source.ts
src/app/pages/: app.accessdenied.component.html  app.error.component.html  app.home.component.css  app.home.component.html  app.home.component.ts  app.login.component.html  app.notfound.component.html
src/assets/pages/: landing.html
src/assets/sass/layout/: _landing.scss  _topbar.scss
testdestination/testdir/sub1/: sub1_file1
