[package]
name = "landoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

walkdir = "2"

md-5 = "0.10.6"
sha3 = "0.10.8"

flate2 = "1.0.28"

[build-dependencies]
tonic-build = "0.11.0"
walkdir = "2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"