[package]
name = "landoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

walkdir = "2"

ring = "0.17.8"
data-encoding = "2.5.0"

clap = { version = "4.5.2", features = ["derive"]}

[build-dependencies]
tonic-build = "0.11.0"
walkdir = "2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"